src/app/shared/comments/comments.component.scss
@import "../../../sass/declarations";

.comment {
  background-color: #ffffff;
  border-radius: 2px;
  font-size: 1.3rem;

  border-radius: 0.5rem;
  padding: 1rem;
  display: flex;

  &__left-pane {
    padding: 1rem 1rem 1rem 1rem;
  }

  &__right-pane {
    padding: 1rem 2rem 0 1rem;
  }

  &__info {
    display: flex;
    align-items: center;

    font-size: 1.6rem;

    &--photo {
      border-radius: 50%;
      margin-right: 1rem;
      overflow: hidden;

      display: flex;
      justify-content: center;
      align-items: center;

      img {
        height: auto;
        width: 55px;
      }
    }

    &--user {
      margin-right: 1rem;
      cursor: pointer;
    }

    &--time {
      color: #aaaaaa;
    }
  }

  &__text {
    margin-bottom: 1.2rem;
    font-size: 1.6rem;
  }

  &__replies {
    display: flex;
    flex-direction: column;
    margin-left: -1rem;
  }
}

.reply {
  padding: 1rem 0;

  display: flex;

  &:not(:last-of-type) {
    border-bottom: 1px solid rgb(221, 221, 221);
  }

  &__text {
    font-size: 1.6rem;
  }

  &__left-pane {
    padding: 0 1rem 1rem 1rem;
  }

  &__info {
    display: flex;
    align-items: center;
    margin-bottom: 1rem;

    font-size: 1.5rem;

    &--photo {
      height: 4rem;
      width: 4rem;
      border-radius: 50%;
      margin-right: 1rem;
      overflow: hidden;

      display: flex;
      justify-content: center;
      align-items: center;

      img {
        height: 100%;
        width: auto;
      }
    }

    &--user {
      margin-right: 1rem;
    }

    &--time {
      color: #aaaaaa;
    }
  }
}

.editor-statusbar {
  display: none;
}

.CodeMirror {
  padding: 0;
  max-height: 30px;
  min-height: 200px !important;
}

.comment > * {
  margin-bottom: 2rem;
}

.new_comment {
  font-size: 1.6rem;
}

.gap {
  margin: 0 1rem;
  color: #aaaaaa;
}

